--- a/src/app/feature/customer/screens/list/list.component.html
+++ b/src/app/feature/customer/screens/list/list.component.html
@@ -1,1 +1,1 @@
-<table-customer [customers]="customers" (rowClicked)="clickAtRow($event)" />
+<table-customer [customers]="customers" (rowClicked)="rowClicked.emit($event)" />
