--- a/src/app/feature/product/screens/list/list.component.html
+++ b/src/app/feature/product/screens/list/list.component.html
@@ -1,1 +1,1 @@
-<table-product (messageClicked)="rowClicked($event)" [justShow]="true"/>
+<table-product (messageClicked)="rowClicked.emit($event)" [justShow]="true"/>
