--- a/src/app/feature/customer/screens/details/details.component.css
+++ b/src/app/feature/customer/screens/details/details.component.css
@@ -2,22 +2,29 @@
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: burlywood;
     padding: 30px;
-    gap: 20px 0px;
+}
+
+.main-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    gap: 0px 20px;
 }
 
 .container-customer{
-    width: 60%;
-    height: 20%;
-    max-width: 1000px;
     display: flex;
     flex-direction: column;
+    width: 20%;
     background-color: aquamarine;
     padding: 10px;
-    justify-content: space-around;
+}
+
+.container-stepper{
+    flex: 1;
 }
 
 .id-name{
@@ -39,13 +46,6 @@
     display: flex;
     gap: 0px 10px;
     justify-content: end;
-}
-
-.stepper{
-    height: 80%;
-    width: 80%;
-    max-width: 1000px;
-    padding-bottom: 20px;
 }
 
 .box-address, .box-sub-customers{
@@ -72,10 +72,28 @@
 }
 
 ::ng-deep .mat-horizontal-stepper-header-container{
-    width: 30%;
-    min-width: 315px;
+    width: auto;
+}
+
+payments {
+    height: 100%;
+}
+
+orders {
+    height: 100%;
 }
 
 
+/*   Auto reply message   */
 
+.auto-reply-message{
+    background-color: rgb(177, 177, 177);
+    border-radius: 4px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px 0px;
+    align-items: center;
+    justify-content: center;
+}
 
