payments now is advanced

--- a/src/app/feature/customer/components/forms/form-customer/form-customer.component.html
+++ b/src/app/feature/customer/components/forms/form-customer/form-customer.component.html
@@ -31,5 +31,7 @@
     </mat-form-field>
         
     <button *ngIf="!hasCustomer" [disabled]="CustomerForm.status === 'DISABLED'"
-     mat-raised-button type="submit" class="btt-form-customer">Salvar</button>
+     mat-raised-button type="submit" class="btt-form-customer">
+      {{forDependents ? 'Adicionar' : 'Salvar'}}
+    </button>
 </form>
