--- a/src/app/feature/customer/components/payments/payments.component.css
+++ b/src/app/feature/customer/components/payments/payments.component.css
@@ -1,6 +1,10 @@
 :host {
-    background-color: aqua;
     display: flex;
+    flex-direction: column;
+}
+
+.bttn-toggle-group {
+    width: 150px;
 }
 
 table-payment {
