--- a/src/app/feature/customer/screens/register/register.component.html
+++ b/src/app/feature/customer/screens/register/register.component.html
@@ -12,7 +12,7 @@
         </mat-step>
 
         <mat-step label="Dependentes">         
-            <sub-customers [customerId]="customer?.id" [data]="dependents"/>           
+            <!--<sub-customers [customerId]="customer?.id" [data]="dependents"/>-->        
         </mat-step>
         
     </mat-stepper>
