--- a/src/app/feature/customer/components/trees/sub-customers/sub-customers.component.css
+++ b/src/app/feature/customer/components/trees/sub-customers/sub-customers.component.css
@@ -1,6 +1,4 @@
 :host{
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -8,16 +6,9 @@
     justify-items: center;
 }
 
-
-form-customer{
-    width: 50%;
-    max-width: 800px;
-    height: auto;
-}
-
 .list{
-    width: 50%;
-    max-width: 800px;
+    display: flex;
+    width: 100%;
     background-color: aqua;
     overflow-y: auto;
     flex: 1;
@@ -25,8 +16,7 @@ form-customer{
 
 .message-empty{
     display: flex;
-    width: 50%;
-    max-width: 800px;
+    width: 100%;
     background-color: aqua;
     flex: 1;
     justify-content: center;
