--- a/src/app/shared/components/tables/table-customer/table-customer.component.html
+++ b/src/app/shared/components/tables/table-customer/table-customer.component.html
@@ -7,23 +7,22 @@
   <mat-hint>Digite o nome do cliente</mat-hint>
 </mat-form-field>
 
-<cdk-virtual-scroll-viewport itemSize="18" *ngIf="dataSource != undefined; else loading" class="box-table">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 demo-table">
     <!-- Position Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>Id</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
       <td mat-cell *matCellDef="let element">{{element.id}}</td>
     </ng-container>
   
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
       <td mat-cell *matCellDef="let element">{{element.name}}</td>
     </ng-container>
   
     <!-- Weight Column -->
     <ng-container matColumnDef="cpf">
-      <th mat-header-cell *matHeaderCellDef>CPF</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>CPF</th>
       <td mat-cell *matCellDef="let element">{{element.cpf}}</td>
     </ng-container>
   
@@ -37,7 +36,7 @@
     ></tr>
     
   </table>
-</cdk-virtual-scroll-viewport>
+
 
 <ng-template #loading>
   <div class="box-spinner">
