--- a/src/app/shared/components/tables/table-payment/table-payment.component.html
+++ b/src/app/shared/components/tables/table-payment/table-payment.component.html
@@ -1,5 +1,5 @@
-<table mat-table [dataSource]="dataSource" matSort matSortActive="paymentDate" matSortDirection="asc"
-    class="mat-elevation-z8" multiTemplateDataRows>
+<table mat-table [dataSource]="dataSource" matSort
+    matSortActive="paymentDate" matSortDirection="asc" class="mat-elevation-z8" multiTemplateDataRows>
 
     <!-- Amount Column -->
     <ng-container matColumnDef="amount">
