--- a/src/app/feature/customer/components/dependents/dependents.component.html
+++ b/src/app/feature/customer/components/dependents/dependents.component.html
@@ -1,3 +1,3 @@
 <form-customer (submited)="push($event)" [forDependents]="true" />  
 
-<sub-customers [data]="data"/>
+<sub-customers [data]="dependents"/>
