--- a/src/app/feature/customer/components/orders/orders.component.css
+++ b/src/app/feature/customer/components/orders/orders.component.css
@@ -3,30 +3,17 @@
     flex-direction: column;
 }
 
-.box-table {
-    width: 100%;
-    height: 100%;
+.bttn-toggle-group {
+    width: 150px;
+}
+
+table-order {
     overflow-y: auto;
 }
 
-.mat-mdc-row .mat-mdc-cell {
-    border-bottom: 1px solid transparent;
-    border-top: 1px solid transparent;
-    cursor: pointer;
-}
-
-.mat-mdc-row:hover .mat-mdc-cell {
-    background-color: rgb(228, 228, 228);
-}
-
-.demo-row-is-clicked {
-    font-weight: bold;
-}
-
-.message-empty {
+.loading{
     display: flex;
     flex: 1;
     justify-content: center;
     align-items: center;
-    background-color: aquamarine;
 }
