--- a/src/app/feature/customer/components/orders/orders.component.html
+++ b/src/app/feature/customer/components/orders/orders.component.html
@@ -1,37 +1,25 @@
-<div *ngIf="dataSource.data.length > 0; else empty" class="box-table">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table sticky-header">
-        <!-- status Column -->
-        <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>Status</th>
-            <td mat-cell *matCellDef="let element">{{element.status}}</td>
-        </ng-container>
-
-        <!-- createdAt Column -->
-        <ng-container matColumnDef="createdAt">
-            <th mat-header-cell *matHeaderCellDef>Data</th>
-            <td mat-cell *matCellDef="let element">{{element.createdAt | date: 'dd/MM/yyyy - HH:mm'}}</td>
-        </ng-container>
-
-        <!-- gross Amount Column -->
-        <ng-container matColumnDef="grossAmount">
-            <th mat-header-cell *matHeaderCellDef>Valor bruto</th>
-            <td mat-cell *matCellDef="let element">{{element.grossAmount | currency }}</td>
-        </ng-container>
-
-        <!-- net Amount Column -->
-        <ng-container matColumnDef="netAmount">
-            <th mat-header-cell *matHeaderCellDef>Valor líquido</th>
-            <td mat-cell *matCellDef="let element">{{element.netAmount | currency }}</td>
-        </ng-container>
+<mat-button-toggle-group #group="matButtonToggleGroup" class="bttn-toggle-group" value="0"
+    (change)="bttnToggleChange($event)">
+    <mat-button-toggle value="0">Á Pagar </mat-button-toggle>
+    <mat-button-toggle value="1">Já Pago</mat-button-toggle>
+</mat-button-toggle-group>
 
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row (click)="openOrder(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-</div>
-
-<ng-template #empty>
-    <div class="message-empty">
-        <h1>Pedidos vazios</h1>
+<!-- Display when data is 'LOADING' -->
+<ng-container *ngIf="!data[+group.value]; else displayTable">
+    <div class="loading">
+        <main-load />
     </div>
+</ng-container>
+
+<!-- Display with 'CONTENTED' data -->
+<ng-template #displayTable>
+    <table-order *ngIf="data[+group.value]!.length > 0; else displayEmpty"
+        [data]="data[+group.value]"
+        (rowClicked)="openOrder($event)" />
+</ng-template>
+
+<!-- Display when data is 'EMPTY' -->
+<ng-template #displayEmpty>
+    <h1>Está vaziaa</h1>
 </ng-template>
