--- a/src/app/feature/customer/components/payments/payments.component.html
+++ b/src/app/feature/customer/components/payments/payments.component.html
@@ -1,13 +1,28 @@
-<mat-button-toggle-group class="bttn-toggle-group" value="1" (change)="bttnToggleChange($event)">
-    <mat-button-toggle value="1">Á Pagar </mat-button-toggle>
-    <mat-button-toggle value="2">Já Pago</mat-button-toggle>
+<mat-button-toggle-group #group="matButtonToggleGroup" class="bttn-toggle-group"
+    value="0" (change)="bttnToggleChange($event)">
+    <mat-button-toggle value="0">Á Pagar </mat-button-toggle>
+    <mat-button-toggle value="1">Já Pago</mat-button-toggle>
 </mat-button-toggle-group>
 
-<table-payment [payments]="payments" [displayColumns]="displayedColumns"
-    *ngIf="payments.length > 0; else empty" />
+    <!-- Display when data is 'LOADING' -->
+    <ng-container *ngIf="!data[+group.value]; else displayTable">
+        <div class="loading" >
+            <main-load />
+        </div>
+    </ng-container>
 
-<ng-template #empty>
-    <div class="message-empty">
-        <h1>Não tem pagamentos</h1>
-    </div>
-</ng-template>
+    <!-- Display with 'CONTENTED' data -->
+    <ng-template #displayTable>
+        <table-payment *ngIf="data[+group.value]!.length > 0; else displayEmpty"
+            [displayColumns]="displayedColumns"
+            [payments]="data[+group.value]"
+            (rowClicked)="rowClicked($event)"/>
+    </ng-template>
+
+    <!-- Display when data is 'EMPTY' -->
+    <ng-template #displayEmpty>
+        <h1>Está vaziaa</h1>
+    </ng-template>
+    
+    
+    
