--- a/src/app/shared/components/tables/table-order/table-order.component.css
+++ b/src/app/shared/components/tables/table-order/table-order.component.css
@@ -1,7 +1,7 @@
 :host {
     display: flex;
     flex-direction: column;
-    gap: 10px 0px;
+    overflow-y: auto;
 }
 
 .sticky-header {
@@ -10,49 +10,7 @@
     z-index: 1;
 }
 
-.box-buttons {
-    display: flex;
-    flex-direction: row-reverse;
-    gap: 0px 15px;
-}
-
-.box-table {
-    height: 100%;
-    background-color: rgb(194, 199, 202);
+table {
     overflow-y: auto;
+    flex: 1;
 }
-
-.mat-column-select {
-    width: 30px;
-}
-
-.mat-column-options {
-    width: 30px;
-}
-
-.mat-form-field-quantity{
-    width: 80px;
-    padding: 10px 0px;
-}
-
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
-}
-
-.mat-form-field-quantity ::ng-deep .mat-mdc-form-field-subscript-wrapper{
-    display: none;
-}
-
-
-.make-tomato{
-    background-color: tomato;
-}
-
-
-tr.make-tomato:hover{
-    background-color: tomato;
-}
-
-
