payment dialog is working

--- a/src/app/feature/product/components/forms/form-product/form-product.component.html
+++ b/src/app/feature/product/components/forms/form-product/form-product.component.html
@@ -23,8 +23,7 @@
         </button>
     </mat-chip-listbox>
 
-    <advance-chip-listbox [source]="productTypes" formControlName="productType"
-      [displayProperty]="'name'"/>
+    <advance-chip-listbox formControlName="productType"/>
 
     <mat-form-field appearance="fill" class="input-name">
       <mat-label>Nome</mat-label>
