--- a/src/app/feature/customer/components/dialogs/payment-detail/payment-detail.component.html
+++ b/src/app/feature/customer/components/dialogs/payment-detail/payment-detail.component.html
@@ -1,13 +1,28 @@
-<h2 mat-dialog-title>Pagamento {{payment.id}}</h2>
+<h2 mat-dialog-title>Pagamento {{data.id}}</h2>
 <div mat-dialog-content>
-    <h2>Valor: {{payment.amount| currency }}</h2>
-    <h2>Valor a pagar: {{payment.paymentDate| date: 'dd/MM/yyyy' }}</h2>
-    <h2>Tipo de pagamento: {{payment.paymentType?.name || 'A definir' }}</h2>
-    <h2>Valor pago: {{payment.amountPayed || 'A definir' }}</h2>
-    <h2>payment realizada: {{payment.payedAt | date: 'dd/MM/yyyy'}}</h2>
-    <advance-chip-listbox [source]="paymentTypes" [formControl]="paymentTypeControl" />
+
+    <h2>Valor: {{data.amount| currency }}</h2>
+    <h2>Valor a pagar: {{data.paymentDate | date: 'dd/MM/yyyy' }}</h2>
+
+    <ng-container *ngIf="!data.paid">
+        <form [formGroup]="Form">
+            <h2>Tipo de pagamento: {{data.paymentType?.name || 'A definir' }}</h2>
+            <h2>Valor pago: {{data.amountPayed || 'A definir' }}</h2>
+            <h2>payment realizada: {{data.payedAt | date: 'dd/MM/yyyy'}}</h2>
+            <input-customizable type="number" formControlName="inputValue" />
+            <advance-chip-listbox [data]="paymentTypes" formControlName="inputPaymentType" />
+        </form>
+    </ng-container>
 </div>
 <mat-dialog-actions align="end">
-    <button color="warn" mat-button (click)="dialogRef.close()">Cancelar</button>
-    <button color="primary" mat-button [mat-dialog-close]="undefined" cdkFocusInitial>Pagar</button>
+    <button color="warn" mat-button 
+        (click)="dialogRef.close()"
+        *ngIf="!data.paid">
+        Cancelar
+    </button>
+    <button color="primary" mat-button 
+        [disabled]="!data.paid && Form.invalid"
+        (click)="data.paid ? dialogRef.close() : payNow()">
+        {{data.paid ? 'Ok' : 'Pagar'}}
+    </button>
 </mat-dialog-actions>
