--- a/src/app/shared/components/tables/table-payment/table-payment.component.html
+++ b/src/app/shared/components/tables/table-payment/table-payment.component.html
@@ -66,7 +66,7 @@
                             <input type="number" matInput [formControl]="inputInstallment">
                         </mat-form-field>
 
-                        <advance-chip-listbox [source]="paymentTypes" [formControl]="chipPaymentType"/>
+                        <advance-chip-listbox [formControl]="chipPaymentType"/>
 
                         <button mat-button color="warn" (click)="expandedCanceled()">Cancelar</button>
 
