--- a/src/app/feature/customer/screens/details/details.component.html
+++ b/src/app/feature/customer/screens/details/details.component.html
@@ -24,7 +24,7 @@
 
         <mat-step label="Dependentes">
             <ng-template matStepContent>
-                <dependents [customer]="customer" />
+                <!-- <dependents [customer]="customer" /> -->
             </ng-template>
         </mat-step>
 
