--- a/src/app/feature/product/screens/register/register.component.html
+++ b/src/app/feature/product/screens/register/register.component.html
@@ -42,7 +42,7 @@
 
         <mat-option (click)="openDialogAddBrand()">
           Adicionar
-          <mat-icon>add</mat-icon>
+          <mat-icon>add</mat-icon>``
         </mat-option>
 
         <mat-option *ngFor="let brand of brands" [value]="brand">
