--- a/src/app/feature/customer/components/dialogs/edit-address/edit-address.component.html
+++ b/src/app/feature/customer/components/dialogs/edit-address/edit-address.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Editar endereço {{data.id}}</h2>
 <div mat-dialog-content>
-    <form-address [(hasAddress)]="data" />
+    <form-address />
 </div>
 <mat-dialog-actions align="end">
     <button color="warn" mat-button (click)="dialogRef.close()">Cancelar</button>
