--- a/src/app/feature/customer/components/dialogs/edit-customer/edit-customer.component.html
+++ b/src/app/feature/customer/components/dialogs/edit-customer/edit-customer.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Editar cliente {{data.id}}</h2>
 <div mat-dialog-content>
-    <form-customer [(hasCustomer)]="data" />
+    <form-customer/>
 </div>
 <mat-dialog-actions align="end">
     <button color="warn" mat-button (click)="dialogRef.close()">Cancelar</button>
