--- a/src/app/feature/customer/components/forms/form-customer/form-customer.component.html
+++ b/src/app/feature/customer/components/forms/form-customer/form-customer.component.html
@@ -1,10 +1,10 @@
-<form (ngSubmit)="onSubmit()" [formGroup]="CustomerForm" #formDir="ngForm" class="form-customer"> 
+<form [formGroup]="form" #formDir="ngForm" class="form-customer"> 
     <mat-form-field class="input-name">
       <mat-label>Nome</mat-label>
       <input matInput type="text" matInput formControlName="name"
           placeholder="Nome do cliente">
       <button *ngIf="name.value" matSuffix mat-icon-button aria-label="Clear" (click)="name.setValue('')"
-      [disabled]="CustomerForm.status === 'DISABLED'">
+      [disabled]="form.status === 'DISABLED'">
           <mat-icon>close</mat-icon>
       </button>
       <mat-hint>Digite o nome do cliente</mat-hint>
@@ -29,9 +29,4 @@
         {{ cpf.errors?.['appExistCPF'] }}
       </mat-error>
     </mat-form-field>
-        
-    <button *ngIf="!hasCustomer" [disabled]="CustomerForm.status === 'DISABLED'"
-     mat-raised-button type="submit" class="btt-form-customer">
-      {{forDependents ? 'Adicionar' : 'Salvar'}}
-    </button>
 </form>
