--- a/src/app/feature/customer/screens/list/list.component.html
+++ b/src/app/feature/customer/screens/list/list.component.html
@@ -1,1 +1,14 @@
-<table-customer [customers]="customers" (rowClicked)="rowClicked.emit($event)" />
+<mat-form-field>
+    <mat-label>Nome ou CPF</mat-label>
+    <input matInput type="text" #input>
+    <button *ngIf="input.value" matSuffix mat-icon-button aria-label="Limpar" (click)="input.value = ''">
+      <mat-icon>close</mat-icon>
+    </button>
+    <mat-hint>Digite o nome do cliente</mat-hint>
+</mat-form-field>
+
+<table-entities 
+    [data]="customers"
+    [displayColumns]="displayColumns" 
+    [filterByValue]="input.value"
+    (rowClicked)="rowClicked.emit($event)"/>
