--- a/src/app/feature/customer/screens/register/register.component.css
+++ b/src/app/feature/customer/screens/register/register.component.css
@@ -35,15 +35,13 @@
 .stepper ::ng-deep .mat-horizontal-stepper-content {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 20px 0px;
 }
 
-list-address {
-  height: auto;
-}
 
 list-address {
-  flex: 1;
+  width: 100%;
 }
 
 .container{
@@ -88,12 +86,34 @@ list-address {
   gap: 20px 0px;
 }
 
-.form-address{
-  height: auto;
-}
-
 .list-address{
   flex: 1;
+}
+
+.dependent-box{
+  width: 100%;
+  max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px 0px;
+}
+
+.section-form-dependent{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.section-form-dependent form-customer{}
+
+.section-dependent-bttns{
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+table-entities{
+  width: 100%;
 }
 
 ::ng-deep .mat-horizontal-stepper-header-container {
