--- a/src/app/shared/components/tables/list-customers/table-entities.component.html
+++ b/src/app/shared/components/tables/list-customers/table-entities.component.html
@@ -17,16 +17,16 @@
         </mat-checkbox>
       </td>
     </ng-container>
+
   
-    <!-- Position Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <ng-container *ngFor="let item of displayColumns | keyvalue" [matColumnDef]="item.key">
+      <th mat-header-cell *matHeaderCellDef> {{item.value}} </th>
+      <td mat-cell *matCellDef="let element"> {{element[item.key] }} </td>
     </ng-container>
   
   
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-        (click)="selection.toggle(row)">
+        (click)="selectable ? selection.toggle(row) : rowClicked.next(row)">
     </tr>
-  </table>
+</table>
